--- a/style.css
+++ b/style.css
@@ -153,54 +153,15 @@ p{
 
 }
 
-
-#nav-left li{
-  display: inline-block;
-}
-
-#nav-left a:link {
-  color: black;
-  text-decoration: none;
-}
-#nav-left a:visited {
-  color: black;
-  text-decoration: none;
-
-}
-
-#nav-left a:hover {
-  font-weight: bold;
-}
-
-#menu-item-59 a:link {
-  text-decoration: underline;
-  text-decoration-color: #9B7185;
-}
-
-#menu-item-59 a:visited {
-  text-decoration: underline;
-  text-decoration-color: #9B7185;
-}
-
-#toggle {
-display: none;
-}
-
-.show-search {
-  display: none;
-}
-
-
-
-
-
 ul {
     margin: 0;
     list-style: none;
     display: inline-block;
 }
 
-
+li {
+    display: inline-block;
+}
 
 
 /*#logo {
@@ -387,240 +348,6 @@ img.donatetoppic{
 	list-style: disc !important;
 	display: default;
 }
-
-
-.icon{
-    max-width: 15%;
-    padding:1%;
-}
-
-.footertop{
-    clear:both;
-    text-align: center;
-    line-height: 800%;
-    display: block;
-
-    text-align: center;
-    line-height: 800%;
-
-}
-
-.footerbottom {
-    text-align: center;
-    clear: both;
-    border-top: dotted 1px #ffffff;
-}
-
-div.footerdown{
-    background-color: #9B7185;
-    padding-top:30px;
-}
-
-
-h4.singupheader{
-    font-family: 'Arvo',serif;
-    color:#FFFFFF;
-    padding-bottom: 1%;
-    font-size: 1.2em;
-    float: left;
-    padding-left: 2%;
-    
-}
-
-p.signup{
-    margin-top:1em;
-    margin-bottom: 1em;
-    float: left;
-    padding-left: 2%;
-}
-
-#cover{
-    clear:both;
-    /*background-color: aqua;*/
-    width:75%;
-    margin: 0 auto;
-    padding-bottom: 2%;
- 
-}
-
-p.follow {
-    text-align: left;
-    padding-left: 25%;
- 
-}
-
-p.small {
-    padding-top: 2%;
-    font-size: .7em;
-    color:#ffffff;
-}
-
-#right {
-	float: right;
-	/*width: 220px;*/
-    width:40%;
-    padding-bottom: 4%;
-    text-align: center;
-}
- 
- /*sign up form style---------------*/     
-#mc_embed_signup{background:#9B7185; color:#FFFFFF;clear:left; width:80%; padding-right:15%; }
-
-#mc-embedded-subscribe-form{ width:60%;float:left;padding-left: 120px; color:#FFFFFF;}
- 
-#mc_embed_signup form { width:60%;text-align: left; padding:0px; color:#FFFFFF;}
-    
-#mc_embed_signup input.email {
-    /*font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;*/
-    font-size: .8em;
-    border: 1px solid #ffffff;
-    margin-top: 5%;
-    /*-webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;*/
-    color: #ffffff;
-    background-color: #9B7185;
-    /*box-sizing: border-box;*/
-    height: 2.9em;
-    padding: 0px 0.4em;
-    display: inline-block;
-    margin: 0;
-    width: 75%;
-    vertical-align: top;
-}
-      
-/*
-      #mc_embed_signup input.email.placeholder{
-          color: white;
-      }
-*/
-      
-   
-      
-    /*
-#mc_embed_signup label {
-    display: block;
-    font-size: 14px;
-    padding-top: 10px;
-    padding-bottom: 20px;
-}*/
-
-#mc_embed_signup .button {
-    font-size: 13px;
-    border: none;
-    /*
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;*/
-    letter-spacing: .03em;
-    color: #636363;
-    background-color: #E0E0E0;
-    box-sizing: border-box;
-    height: 2.7em;
-    /*line-height: 2.5em;*/
-    padding: 0 5px;
-    display: inline-block;
-    margin: 0;
-    transition: all 0.23s ease-in-out 0s;
-    width:100%;
-}
-
-/* -------------- Start Reponsive -------------- */
-
-/* Below 1024px */
-@media screen and (maxwidth: 1024px) {
-
-}
-
-
-
-
-
-/*phone version*/
-
-@media screen and (max-width: 1000px) {
-  #nav-left {
-    width: 70%;
-}
-}
-
-@media screen  and (max-width:768px){
-    body{background-color: aquamarine;}
-     #right {
-	
-
-  float: left;
-	/*width: 220px;*/
-    width:80%;
-    padding-top: 2%;         
-
-    }
-#toggle {
-display: block; /* make our toggle visible */
-float: right; /* float our toggle right */
-width: 17%;
-}
-
-#nav-left {
-display: none; /* hide our navigation */
-padding-left: 10px;
-padding-right: 10px;
- margin-top: 15px;
-}
-
-#nav-left li {
-  display: block;
-
-}
-
- 
-
-#nav-left ul li:last-child {
-border-bottom: 1px solid #FFF;
-}
-
-#nav-left ul li a {
-display: block; /* makes the anchor tag extend out */
-}
-    p.follow {
-    text-align: center;
- 
-}
-    div.iconbox{
-    /*max-width: 15%;*/
-    padding-left: 25%;
-        
-}
-   
-
-
-    
-#mc_embed_signup{width:170%; padding-right:1%; }
-   
-    
-
-/* squares* */ 
-.square {
-  width: 100%;
-}
-
-/* Slide show */
-  .slideImage .inner_box{
-        top: 50%;
-        left:50%;
-}
-.slideImage .inner_box h1{
-        font-size: 1.7em;
-}
-
-.slideImage .inner_box .button{
-        padding: 1% 4%;
-        margin-top:13%;
-}
-    
-}
-
-
 @media screen  and (min-width: 300px)  and (max-width:1300px){
 	.sec{
 		height: 100%;
