--- a/style.css
+++ b/style.css
@@ -82,33 +82,6 @@ p{
   clear: both;
 }
 
-#footer::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-#footer {
-	width: 940px;
-	margin: 0 auto;
-	padding: 0 20px;
-
-
-}
-
-#footer p {
-	clear: both;
-}
-
-#left {
-	float: left;
-	width: 485px;
-}
-
-#right {
-	float: right;
-	width: 220px;
-}
 
 .square {
 	float: left;
@@ -199,33 +172,69 @@ li {
     max-width: 200px;
 }
 
-.icon{
-    max-width: 60px;
+/*SLIDER++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/* -- slider -- */
+.slideImage{
+position: relative;
+margin: 20px auto;
+}
+.slideImage img {
+    width: 100%;
 }
 
-.footertop{
-    clear:both;
-    text-align: center;
-    line-height: 800%;
-    display: block;
-
-    text-align: center;
-    line-height: 800%;
+.slideImage .inner_box{
+  position:absolute;
+/*  background:rgba(255,255,255,0.6);
+  padding: 4%;*/
+  top:50%;
+  left:60%;
+  transform:translate(-50%,-50%);
+}
+.slideImage .inner_box h1{
+  color: white;
+   font-size: 2.5em;
+   font-weight: 300;
 
 }
 
-.footerbottom{
-    text-align: center;
+.slideImage .inner_box pg{
+  color: white;
+   font-size: 1em;
+   font-weight: 300;
 
-
+}
+.slideImage .inner_box .button{
+   font-family: 'sinkin_sans100_thin', sans-serif, sans-serif, ariel;
+    border: 1px solid white;
+    font-size: 1em;
+    font-weight: 800;
+    float: left;
+    padding: 10px 15px;
+    margin-top:120px;
+    display: inline-block;
+    cursor: pointer;
 
 }
 
-div.footerdown{
-    background-color: #9B7185;
-    padding-top:30px;
+
+.donatemiddle p {
+	margin-top: 50px;
+	text-align: justify;
+
 }
 
+.mySlides {display:none}
+
+.inner_box .button a:link {
+  color: white;
+  text-decoration: none
+}
+
+.inner_box .button a:visited {
+  color: white;
+  text-decoration: none;
+}
+/*ADOPT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .mainadopt{
 	width: 70%;
   	margin: 0 auto;
@@ -270,7 +279,6 @@ div.footerdown{
 }
 
 
-
 .adoptword{
 	display: inline-block;
     max-width: 40%;
@@ -309,6 +317,8 @@ button{
 button.buttonclick1{
 	margin-top: 100px;
 }
+
+/*DONATE+++++++++++++++++++++++++++++++++++++++++++++++++++*/
 button.donatebut{
 	margin-top:0;
 }
@@ -338,6 +348,7 @@ img.donatetoppic{
 	text-align: justify;
 }
 
+/*ABOUT++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 #about {
 	padding:0;
 	margin-bottom: 100px;
@@ -354,6 +365,188 @@ img.donatetoppic{
 	list-style: disc !important;
 	display: default;
 }
+
+/*FOOTER++++++++++++++++++++++++++++++++++++++++++++*/
+
+#footer::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+#footer {
+	/*width: 940px;*/
+    max-width:100%;
+	margin: 0 auto;
+	/*padding: 0 20px;*/
+}
+
+#footer p {
+	clear: both;
+}
+
+
+#right p {
+  color: #ffffff;
+}
+
+#right {
+	float: right;
+	width: 220px;
+
+}
+
+.icon{
+    max-width: 15%;
+    padding:1%;
+}
+
+.footertop{
+    clear:both;
+    text-align: center;
+    line-height: 800%;
+    display: block;
+
+    text-align: center;
+    line-height: 800%;
+
+}
+
+.footerbottom {
+    text-align: center;
+    clear: both;
+    border-top: dotted 1px #ffffff;
+}
+
+div.footerdown{
+    background-color: #9B7185;
+    padding-top:30px;
+}
+
+
+h4.singupheader{
+    font-family: 'Arvo',serif;
+    color:#FFFFFF;
+    padding-bottom: 1%;
+    font-size: 1.2em;
+    float: left;
+    padding-left: 2%;
+
+}
+
+p.signup{
+    margin-top:1em;
+    margin-bottom: 1em;
+    float: left;
+    padding-left: 2%;
+}
+
+#cover{
+    clear:both;
+    /*background-color: aqua;*/
+    width:75%;
+    margin: 0 auto;
+    padding-bottom: 2%;
+
+}
+
+p.follow {
+    text-align: left;
+    padding-left: 25%;
+
+}
+
+p.small {
+    padding-top: 2%;
+    font-size: .7em;
+    color:#ffffff;
+}
+
+#right {
+	float: right;
+	/*width: 220px;*/
+    width:40%;
+    padding-bottom: 4%;
+    text-align: center;
+}
+
+ /*sign up form style---------------*/
+#mc_embed_signup{background:#9B7185; color:#FFFFFF;clear:left; width:80%; padding-right:15%; }
+
+#mc-embedded-subscribe-form{ width:60%;float:left;padding-left: 120px; color:#FFFFFF;}
+
+#mc_embed_signup form { width:60%;text-align: left; padding:0px; color:#FFFFFF;}
+
+#mc_embed_signup input.email {
+    /*font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;*/
+    font-size: .8em;
+    border: 1px solid #ffffff;
+    margin-top: 5%;
+    /*-webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;*/
+    color: #ffffff;
+    background-color: #9B7185;
+    /*box-sizing: border-box;*/
+    height: 2.9em;
+    padding: 0px 0.4em;
+    display: inline-block;
+    margin: 0;
+    width: 75%;
+    vertical-align: top;
+}
+
+
+#mc_embed_signup .button {
+    font-size: 13px;
+    border: none;
+    /*
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;*/
+    letter-spacing: .03em;
+    color: #636363;
+    background-color: #E0E0E0;
+    box-sizing: border-box;
+    height: 2.7em;
+    /*line-height: 2.5em;*/
+    padding: 0 5px;
+    display: inline-block;
+    margin: 0;
+    transition: all 0.23s ease-in-out 0s;
+    width:100%;
+}
+
+/*RESPONSIVE+++++++++++++++++++++++++++++++++++++++++*/
+/* Below 1024px */
+@media screen and (maxwidth: 1024px) {
+
+}
+
+/*phone version*/
+
+@media screen  and (max-width:768px){
+    body{background-color: aquamarine;}
+     #right {
+	float: left;
+	/*width: 220px;*/
+    width:80%;
+    padding-top: 2%;
+
+    }
+    p.follow {
+    text-align: center;
+
+}
+    div.iconbox{
+    /*max-width: 15%;*/
+    padding-left: 25%;
+
+}
+
+#mc_embed_signup{width:170%; padding-right:1%; }
+
+
 @media screen  and (min-width: 300px)  and (max-width:1300px){
 	.sec{
 		height: 100%;
@@ -398,6 +591,30 @@ img.donatetoppic{
 		margin-top: 50px;
 		width: 90%;
 		text-align: justify;
+	}
+
+	/* squares */
+
+	.square {
+	  width: 100%;
+	}
+
+	.button {
+	  width: 100%;
+	}
+	  /* Slide show */
+	  .slideImage .inner_box{
+	        top: 50%;
+	        left:50%;
+	}
+
+	.slideImage .inner_box h1{
+	        font-size: 1.4em;
+	}
+
+	.slideImage .inner_box .button{
+	        padding: 2% 5%;
+	        margin-top:15%;
 	}
 
 
