--- a/style.css
+++ b/style.css
@@ -1,23 +1,33 @@
+
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body {
-    background: url('bg-12col.png') center repeat-y;
-	font-family: 'Nunito Sans', sans-serif;
-	font-size: 1.1em;
+    
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.1em;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 header {
-	width: 940px;
-	margin: 0 auto;
-	padding: 0 20px;
+  max-width: 940px;
+  margin: 0 auto;
+  padding: 0 20px;
+  overflow: hidden; /* prevent the great collapse */
+  padding-bottom: 33px;
 
-	height: 300px;
 }
 
 header div {
-	clear: both;
+  clear: both;
+}
+h1 {
+  font-family: 'Arvo', serif;
 }
 
 h2{
@@ -26,9 +36,9 @@ h2{
 
 h3{
    color:#444444;
-	font-size: 1.7em;
-	line-height: 100px;
-	font-family: 'Arvo', serif;
+  font-size: 1.7em;
+  line-height: 100px;
+  font-family: 'Arvo', serif;
 }
 
 h4{
@@ -40,10 +50,10 @@ p{
 }
 
 #logo {
-	float: left;
-	margin-top: 50px;
-	margin-right: 10px;
-	width: 140px;
+  float: left;
+  margin-top: 50px;
+  margin-right: 10px;
+  width: 140px;
 }
 
 #header-widget-area {
@@ -52,23 +62,24 @@ p{
 }
 
 #search-button {
-	float: right;
-	width: 30px;
-	margin-top: 198px;
+  float: right;
+  width: 30px;
+  margin-top: 198px;
 }
 
 #content {
-	width: 940px;
-	margin: 0 auto;
-	padding: 0 20px;
-	border-bottom: 2px dotted black;
+  max-width: 940px;
+  margin: 0 auto;
+  padding: 0 20px;
+  border-bottom: 2px dotted black;
   clear: both;
+  padding-bottom: 10%;
 
 
 }
 
 .slider {
-	max-width: 940px;
+  max-width: 940px;
 }
 
 #content::after {
@@ -77,46 +88,19 @@ p{
   clear: both;
 }
 
-#footer::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-#footer {
-	width: 940px;
-	margin: 0 auto;
-	padding: 0 20px;
-
-
-}
-
-#footer p {
-	clear: both;
-}
-
-#left {
-	float: left;
-	width: 485px;
-}
-
-#right {
-	float: right;
-	width: 220px;
-}
 
 .square {
-	float: left;
-	display:inline;
-	margin-right: 20px;
-	width: 300px;
-	margin-top: 15px;
-	text-align: center;
+  float: left;
+  display:inline;
+  margin-right: 20px;
+  max-width: 300px;
+  margin-top: 15px;
+  text-align: center;
 
-	}
+  }
 
 .square h3, .square p {
-	text-align: center;
+  text-align: center;
 }
 
 #content h2 {
@@ -124,36 +108,41 @@ p{
 }
 
 #last {
-	margin-right:0px;
+  margin-right:0px;
 
 }
 
 .last {
-	margin-right: 0;
+  margin-right: 0;
 }
 
 #nav-left:after {
     content: '';
     display: inline-block;
 
-	margin-left: 400px;
+  margin-left: 400px;
 }
+
+
+
 
 
 #nav-left {
   float: right;
   text-align: justify;
-  max-width: 100%;
-  overflow: hidden;
+  width: 50%;
+  
   padding: 10px 0;
-  margin-left: 50px;
+  margin-left: 12px;
   margin-right: 135px;
   position: absolute;
   margin-top: 195px;
 
 }
 
-
+#mobile-nav {
+  display: none;
+}
 #nav-left li{
   display: inline-block;
 }
@@ -180,6 +169,57 @@ p{
 #menu-item-59 a:visited {
   text-decoration: underline;
   text-decoration-color: #9B7185;
+}
+/* Mobile nav colors/weight */
+#mobile-nav a:link {
+  color: black;
+  text-decoration: none;
+}
+#mobile-nav a:visited {
+  color: black;
+  text-decoration: none;
+
+}
+
+#mobile-nav a:hover {
+  font-weight: bold;
+}
+
+#menu-item-59 a:link {
+  text-decoration: underline;
+  text-decoration-color: #9B7185;
+}
+
+#menu-item-59 a:visited {
+  text-decoration: underline;
+  text-decoration-color: #9B7185;
+}
+
+/* Sub Nav */
+/* Sub Menus */
+  #nav-left li ul {
+    position: absolute;
+    display: none;
+    width: inherit;
+      padding: 0;
+  }
+
+#nav-left li:hover ul {
+    display: block;
+
+  }
+#nav-left li:hover ul li {
+    display: block;
+
+  }
+
+#nav-left li ul li {
+  padding: 0;
+}
+
+#nav-left li ul li:hover {
+  text-decoration: underline;
+    
 }
 
 #toggle {
@@ -219,7 +259,7 @@ ul {
     width: 380px;
 }
 #clear {
-	clear: both;
+  clear: both;
 }
 
 .squareone {
@@ -233,53 +273,104 @@ ul {
     max-width: 200px;
 }
 
-.icon{
-    max-width: 60px;
-}
-
-.footertop{
-    clear:both;
-    text-align: center;
-    line-height: 800%;
-    display: block;
-
-    text-align: center;
-    line-height: 800%;
+/*SLIDER++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/* -- slider -- */
+.slideImage{
+position: relative;
+margin: 20px auto;
+padding-top: 10px;
 
 }
+.slideImage img {
+    width: 100%;
+    background-color: #aaa;
+  opacity: .75;
+    
+}
 
-.footerbottom{
-    text-align: center;
+.slideImage .inner_box{
+  position:absolute;
+  margin: 0 auto;
+  padding: 4%;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+}
+.slideImage .inner_box h1{
+  color: white;
+   font-size: 2.5em;
+   font-weight: 300;
+   text-align: center;
+   padding-bottom: 20px;
 
+}
+
+.slideImage .inner_box h4{
+  color: white;
+   font-size: 1em;
+   font-weight: 300;
+   text-align: center
+
+}
+.slideImage .inner_box .button{
+  
+    border: 1px solid white;
+    font-size: 1em;
+    font-weight: 800;
+    float: left;
+    padding: 10px 15px;
+    margin-top:120px;
+    display: inline-block;
+    cursor: pointer;
+ 
 
 
 }
 
-div.footerdown{
-    background-color: #9B7185;
-    padding-top:30px;
+.padding-left {
+  padding-left: 35%;
 }
 
+
+
+.donatemiddle p {
+  margin-top: 50px;
+  text-align: justify;
+
+}
+
+.mySlides {display:none}
+
+.inner_box .button a:link {
+  color: white;
+  text-decoration: none
+}
+
+.inner_box .button a:visited {
+  color: white;
+  text-decoration: none;
+}
+/*ADOPT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .mainadopt{
-	width: 70%;
-  	margin: 0 auto;
-  	padding: 100px;
-	border: solid 1px #B2B2B2;
-	padding-bottom: 0;
-	overflow:hidden;
+  width: 70%;
+    margin: 0 auto;
+    padding: 100px;
+  border: solid 1px #B2B2B2;
+  padding-bottom: 0;
+  overflow:hidden;
 }
 .mainadopt p, .mainadopt h4 {
-	line-height: 2em;
-	text-align: justify;
-	width: 70%;
-	margin: 0 auto;
-	margin-bottom: 20px;
-	color: black;
+  line-height: 2em;
+  text-align: justify;
+  width: 70%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  color: black;
 }
 .adopttop{
     clear: both;
     display: block;
-	padding-bottom: 100px;
+  padding-bottom: 100px;
     text-align: center;
     line-height: 150%;
 
@@ -296,35 +387,35 @@ div.footerdown{
 }
 
 .adoptcatword{
-	float:left;
+  float:left;
     max-width: 40%;
     line-height: 200%;
     text-align: center;
-	margin-left: 50px;
+  margin-left: 50px;
 }
 
 
 .adoptword{
-	display: inline-block;
+  display: inline-block;
     max-width: 40%;
     line-height: 200%;
     text-align: center;
 }
 
 .sec {
-	height: 300px;
+  height: 300px;
     padding: 100px 0;
-	width: 950px;
-	max-width: 100%;
-	margin: 0 auto;
-	text-align: center;
+  width: 950px;
+  max-width: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 img.adopttoppic{
-	width: 600px;
-	max-width: 100%;
-	margin: 0 auto;
-	margin-bottom: 50px;
+  width: 600px;
+  max-width: 100%;
+  margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 p.txt {width: 100%;margin-bottom:0;line-height: 100px;}
@@ -332,24 +423,26 @@ button{
 
     width: 300px;
     height: 50px;
-	border:none;
+  border:none;
     text-align:center;
     font-size:1.1em;
     background-color: #A36E86;
     color:white;
-	margin-top: 30px;
+  margin-top: 30px;
 }
 button.buttonclick1{
-	margin-top: 100px;
+  margin-top: 100px;
 }
+
+/*DONATE+++++++++++++++++++++++++++++++++++++++++++++++++++*/
 button.donatebut{
-	margin-top:0;
+  margin-top:0;
 }
 
 img.donatetoppic{
-	width: 700px;
+  width: 700px;
     max-width: 100%;
-	height: 100%;
+  height: 100%;
     margin: 50px auto;
 }
 
@@ -360,34 +453,64 @@ img.donatetoppic{
 }
 
 .donatemiddle{
-  	margin: 0 auto;
-  	width: 90%;
-  	line-height: 2em;
+    margin: 0 auto;
+    width: 90%;
+    line-height: 2em;
     border-top: dotted 1px #B2B2B2;
-	height: 100%;
+  height: 100%;
 }
 .donatemiddle p {
-	margin-top: 50px;
-	text-align: justify;
+  margin-top: 50px;
+  text-align: justify;
 }
 
+/*ABOUT++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 #about {
-	padding:0;
-	margin-bottom: 100px;
-	height: 100%;
+  padding:0;
+  margin-bottom: 100px;
+  height: 100%;
 }
 #about ul {
-	line-height: 2em;
-	text-align: justify;
-	width: 70%;
-	margin: 0 auto;
+  line-height: 2em;
+  text-align: justify;
+  width: 70%;
+  margin: 0 auto;
 }
 
 #about ul li {
-	list-style: disc !important;
-	display: default;
+  list-style: disc !important;
+  display: default;
 }
 
+/*FOOTER++++++++++++++++++++++++++++++++++++++++++++*/
+
+#footer::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+#footer {
+  /*width: 940px;*/
+    max-width:100%;
+  margin: 0 auto;
+  /*padding: 0 20px;*/
+}
+
+#footer p {
+  clear: both;
+}
+
+
+#right p {
+  color: #ffffff;
+}
+
+#right {
+  float: right;
+  width: 220px;
+
+}
 
 .icon{
     max-width: 15%;
@@ -424,7 +547,7 @@ h4.singupheader{
     font-size: 1.2em;
     float: left;
     padding-left: 2%;
-    
+
 }
 
 p.signup{
@@ -440,13 +563,13 @@ p.signup{
     width:75%;
     margin: 0 auto;
     padding-bottom: 2%;
- 
+
 }
 
 p.follow {
     text-align: left;
     padding-left: 25%;
- 
+
 }
 
 p.small {
@@ -456,20 +579,20 @@ p.small {
 }
 
 #right {
-	float: right;
-	/*width: 220px;*/
+  float: right;
+  /*width: 220px;*/
     width:40%;
     padding-bottom: 4%;
     text-align: center;
 }
- 
- /*sign up form style---------------*/     
+
+ /*sign up form style---------------*/
 #mc_embed_signup{background:#9B7185; color:#FFFFFF;clear:left; width:80%; padding-right:15%; }
 
 #mc-embedded-subscribe-form{ width:60%;float:left;padding-left: 120px; color:#FFFFFF;}
- 
+
 #mc_embed_signup form { width:60%;text-align: left; padding:0px; color:#FFFFFF;}
-    
+
 #mc_embed_signup input.email {
     /*font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;*/
     font-size: .8em;
@@ -488,22 +611,7 @@ p.small {
     width: 75%;
     vertical-align: top;
 }
-      
-/*
-      #mc_embed_signup input.email.placeholder{
-          color: white;
-      }
-*/
-      
-   
-      
-    /*
-#mc_embed_signup label {
-    display: block;
-    font-size: 14px;
-    padding-top: 10px;
-    padding-bottom: 20px;
-}*/
+
 
 #mc_embed_signup .button {
     font-size: 13px;
@@ -525,148 +633,369 @@ p.small {
     width:100%;
 }
 
-/* -------------- Start Reponsive -------------- */
+/*RESPONSIVE+++++++++++++++++++++++++++++++++++++++++*/
 
-/* Below 1024px */
-@media screen and (maxwidth: 1024px) {
 
+@media screen  and (max-width:1160px){ 
+  #nav-left {
+    width: 62%;
+  }
 }
 
+@media screen  and (max-width:980px){ 
+#nav-left {
+  width: 70%;
 
 
-
+}
 
 /*phone version*/
 
-@media screen and (max-width: 1000px) {
-  #nav-left {
-    width: 70%;
-}
-}
-
 @media screen  and (max-width:768px){
-    body{background-color: aquamarine;}
-     #right {
-	
+ /*slider */
 
+
+.slideImage .inner_box h1{
+  
+   font-size: 1.3em;
+
+}
+
+.slideImage .inner_box h4{
+  
+   font-size: 1.1em;
+  
+
+}
+
+#search-button {
+    margin-top: 170px;
+}
+
+
+  #logo {
+    float: left;
+    margin-top:0;
+  }
+    
+     #right {
   float: left;
-	/*width: 220px;*/
+  /*width: 220px;*/
     width:80%;
-    padding-top: 2%;         
+    padding-top: 2%;
 
     }
-#toggle {
-display: block; /* make our toggle visible */
-float: right; /* float our toggle right */
-width: 17%;
-}
-
-#nav-left {
+  #nav-left {
 display: none; /* hide our navigation */
+float: none;
 padding-left: 10px;
 padding-right: 10px;
- margin-top: 15px;
+position: relative;
+margin-right: 0px;
+margin-top: 15px;
+
 }
 
-#nav-left li {
+#mobile-nav {
+  display: none;
+}
+/* Togle menu */
+  #toggle {
+  display: block; /* make our toggle visible */
+  float: right; /* float our toggle right */
+  margin-top: 165px;
+  font-size: 35px;
+
+  
+}
+
+
+#toggle a {
+  color: #aaa;
+  text-decoration: none;
+}
+
+#mobile-nav ul {
+float: none;
+padding: 10px;
+border-top: 1px solid #FFF;
+margin: 0;
+
+}
+#mobile-nav li {
   display: block;
+  margin-top: 0px;
+position: relative;
+margin-left: 24px;
+float: none;
 
 }
 
- 
+#mobile-nav ul li {
+float: none;
+padding: 10px;
+border-top: 1px solid #FFF;
+margin: 0;
 
-#nav-left ul li:last-child {
-border-bottom: 1px solid #FFF;
+
+}
+#mobile-nav ul li a {
+  display: block;
+  clear: none;
 }
 
-#nav-left ul li a {
-display: block; /* makes the anchor tag extend out */
+
+
+.search-button {
+  margin-left: 60%;
+
+}
+
+
+    .mainadopt {
+    padding: 0;
+    width: 100%;
+}
+
+
+
+/* ------------ */
+header div {
+  clear: none;
+}
+/* search button */
+#search-button {
+float: none;
+margin-left: 67%;
 }
     p.follow {
     text-align: center;
- 
+
 }
     div.iconbox{
     /*max-width: 15%;*/
     padding-left: 25%;
-        
+
 }
-   
+
+.padding-left {
+  padding-left: 50%;
+}
 
 
-    
+
 #mc_embed_signup{width:170%; padding-right:1%; }
-   
-    
-
-/* squares* */ 
 .square {
   width: 100%;
 }
 
-/* Slide show */
-  .slideImage .inner_box{
-        top: 50%;
-        left:50%;
-}
-.slideImage .inner_box h1{
-        font-size: 1.7em;
+@media screen  and (max-width:751px){
+ #search-button {
+  margin-left: 67%;
+ }
 }
 
-.slideImage .inner_box .button{
-        padding: 1% 4%;
-        margin-top:13%;
-}
-    
+@media screen  and (max-width:686px){
+ #search-button {
+  margin-left: 66%;
+ }
 }
 
+@media screen  and (max-width:686px){
+ #search-button {
+  margin-left: 65%;
+ }
+}
+
+@media screen  and (max-width:634px){
+ #search-button {
+  margin-left: 63%;
+ }
+}
+
+@media screen  and (max-width:620px){
+ #search-button {
+  margin-left: 62%;
+ }
+}
+
+@media screen  and (max-width:594px){
+ #search-button {
+  margin-left: 59%;
+ }
+}
+
+@media screen  and (max-width:558px){
+ #search-button {
+  margin-left: 55%;
+ }
+}
+
+@media screen  and (max-width:554px){
+ #search-button {
+  margin-left: 53%;
+ }
+}
+@media screen  and (max-width:480px){
+ #search-button {
+  margin-left: 49%;
+ }
+
+}
+@media screen  and (max-width:446px){
+ #search-button {
+  margin-left: 48%;
+ }
+
+}
+@media screen  and (max-width:442px){
+ #search-button {
+  margin-left: 46%;
+ }
+}
+@media screen  and (max-width:438px){
+ #search-button {
+  margin-left: 42%;
+ }
+}
+@media screen  and (max-width:396px){
+ #search-button {
+  margin-left: 39%;
+ }
+}
+}
+@media screen  and (max-width:376px){
+ #search-button {
+  margin-left: 32%;
+ }
+}
+
+
+@media screen  and (max-width:340px){
+ #search-button {
+  margin-left: 25%;
+ }
+}
+ @media screen  and (max-width:318px){
+ #search-button {
+  margin-left: 21%;
+ }
+}
+
+
+
+@media screen and (max-width: 400px) {
+    .mainadopt {
+    padding: 0;
+    width: 100%;
+  }
+}
+
+
+
+ 
+
+ 
 
 @media screen  and (min-width: 300px)  and (max-width:1300px){
-	.sec{
-		height: 100%;
-	}
-	.cat_responsive{
-		padding-top:50px;
-		position:relative;
-		border-top: 1px dotted #B2B2B2;
-	}
-	.cat_responsive .adoptdog{
-		position: absolute;
-		top:80px;
-		margin-left: -250px;
-	}
-	.adoptpic{float:none;}
-	.adoptword{
-		max-width: 100%;
-	}
-	.adoptcatword{
-		float:none;
-		margin:0 auto;
-		padding-top: 310px;
-		max-width:100%;
-	}
-	.mainadopt p, .mainadopt h4 {
+  .sec{
+    height: 100%;
+  }
+  .cat_responsive{
+    padding-top:50px;
+    position:relative;
+    border-top: 1px dotted #B2B2B2;
+  }
+  .cat_responsive .adoptdog{
+    position: absolute;
+    top:80px;
+    margin-left: -250px;
+  }
+  .adoptpic{float:none;}
+  .adoptword{
+    max-width: 100%;
+  }
+  .adoptcatword{
+    float:none;
+    margin:0 auto;
+    padding-top: 310px;
+    max-width:100%;
+  }
+
+  .mainadopt p, .mainadopt h4 {
     width: 80%;
     margin: 0 auto;
-	line-height: 2em;
-	text-align: justify;
-	margin-bottom: 20px;
-	color: black;
-	}
+  line-height: 2em;
+  text-align: justify;
+  margin-bottom: 20px;
+  color: black;
+  }
 
-	p.txt {
-		width: 400px;
-		text-align: center;
-		margin-bottom: 0;
-		line-height: 100px;
-	}
+  p.txt {
+    width: 400px;
+    text-align: center;
+    margin-bottom: 0;
+    line-height: 100px;
+  }
 
-	.donatemiddle p {
-		margin-top: 50px;
-		width: 90%;
-		text-align: justify;
-	}
+  
+
+  }
+  .donatemiddle p {
+    margin-top: 50px;
+    width: 90%;
+    text-align: justify;
+  }
+
+  /* squares */
+
+  .square {
+    width: 90%;
+  }
+
+  .square-button {
+    width: 100%;
+  }
+    /* Slide show */
+    .slideImage .inner_box{
+          top: 40%;
+          left:50%;
+          width: 80%;
+  }
+
+  .slideImage .inner_box h1{
+          font-size: 1.4em;
+          padding-bottom: 0;
+  }
+
+  .slideImage .inner_box h4{
+        
+  }
+
+  .slideImage .inner_box .button{
+          padding: 2% 5%;
+          margin-top:15%;
+  }
+
+  .padding-left {
+    padding-left: 40%;
+  }
+
+  p.follow {
+
+    padding-left: 12%;
+
+}
+
+ .search-button {
+  margin-left: 11%;
+ }
 
 
 
+}
+@media screen  and (max-width:280px){
+ #search-button {
+  margin-left: 12%;
+ }
 }
