--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ p{
 #nav-left {
   float: right;
   text-align: justify;
-  width: 50%;
+  width: 55%;
   
   padding: 10px 0;
   margin-left: 12px;
@@ -685,7 +685,7 @@ p.small {
     padding-top: 2%;
 
     }
-  #nav-left {
+ #nav-left {
 display: none; /* hide our navigation */
 float: none;
 padding-left: 10px;
@@ -698,6 +698,8 @@ margin-top: 15px;
 
 #mobile-nav {
   display: none;
+  float: left;
+  margin-left: 13px;
 }
 /* Togle menu */
   #toggle {
@@ -727,7 +729,8 @@ margin: 0;
   margin-top: 0px;
 position: relative;
 margin-left: 24px;
-float: none;
+float: left;
+width: 50%;
 
 }
 
@@ -743,6 +746,7 @@ margin: 0;
   display: block;
   clear: none;
 }
+
 
 
 
